# frext

./: .dictionary.txt  .gitattributes  .gitignore  .taplo.toml  .tombi.toml  ATTRIBUTIONS.md  Cargo.toml  LICENSE  README.md  agents.md  deny.toml  flake.nix  opencode.json  renovate.json  typos.toml
.github/workflows/: ci.yml
assets/file-icons/: catppuccin-icons-LICENSE.md
assets/fonts/: CaskaydiaCove-NerdFont-LICENSE.md
frext/: Cargo.toml
frext/src/: app.rs  clipboard.rs  edit_ops.rs  error.rs  file_icon.rs  file_icon_bytes.rs  file_icon_table.rs  font.rs  fs_ops.rs  highlight.rs  icon.rs  lib.rs  main.rs  persistence.rs  search.rs  tab.rs  theme.rs  workspace.rs
nix/: home-manager-module.nix  overlay.nix
