[workspace]
members = ["frext"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "Fred Text — a super lightweight text editor written in Rust"
documentation = "https://github.com/fredsystems/frext/README.md"
readme = "README.md"
homepage = "https://github.com/fredsystems/frext"
repository = "https://github.com/fredsystems/frext"
license = "MIT"
keywords = ["editor", "text-editor", "gui", "egui"]
categories = ["text-editors", "gui"]

[workspace.dependencies]
directories = "6.0.0"
eframe = { version = "0.35.0", default-features = false, features = ["default_fonts", "glow", "persistence", "wayland", "x11"] }
egui = { version = "0.35.0", default-features = false }
env_logger = "0.11.11"
fontdb = "0.23.0"
harfrust = "0.7.0"
log = "0.4.33"
regex = "1.12.4"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
ttf-parser = "0.25.1"
two-face = "0.5.1"

[workspace.lints.clippy]
expect_used = "deny"
unwrap_used = "deny"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
