[package]
name = "frext"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
directories = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
rfd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
two-face = { workspace = true }

[lints]
workspace = true
