[package]
name = "frext"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
arboard = { workspace = true }
directories = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
env_logger = { workspace = true }
fontdb = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
rfd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
trash = { workspace = true }
ttf-parser = { workspace = true }
two-face = { workspace = true }

[dev-dependencies]
harfrust = { workspace = true }

[lints]
workspace = true
